[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerosol-functions"
version = "0.1.15"
description = "Functions to analyze atmospheric aerosol data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # adjust if you have LICENSE file with another license
authors = [
  { name = "Janne Lampilahti", email = "janne.lampilahti@helsinki.fi" }
]
dependencies = [
  "pandas >=1.1.0",
  "numpy >=1.19.0",
  "matplotlib >=3.3.4",
  "scipy >=1.5.3",
  "astral >=3.2",
  "scikit-learn >=1.3.0",
]

[project.urls]
Homepage = "https://github.com/jlpl/aerosol-functions"

[tool.setuptools.packages.find]
where = ["src"]
